# CapaciNet

./: CMakeLists.txt  DOCUMENTATION.md  DOCUMENTATION_FR.md  README.md  package.xml
base_placement_interfaces/: CMakeLists.txt  package.xml
base_placement_interfaces/action/: FindBase.action
base_placement_interfaces/msg/: PoseNamed.msg  WorkSpace.msg  WsSphere.msg
base_placement_interfaces/srv/: AddNamedPose.srv  ClearMaps.srv  GetBasePoses.srv  GetUnionMap.srv  RemoveNamedPose.srv  UpdateParameters.srv  UpdateReachabilityMap.srv
base_placement_plugin/: CMakeLists.txt  COMPILATION_SUCCESS.md  PLAN_REFACTORISATION.md  PORTING_SUMMARY.md  QUICKSTART.md  REFACTORING_COMPLETE.md  REFACTORING_README.md  RVIZ_PLUGIN_ADAPTATION.md  TEST_GUIDE.md  UNION_MAP_TRANSMISSION_FIX.md  architecture_diagram.mmd  component_diagram.mmd  package.xml  plugin_description.xml  sequence_diagram.mmd
base_placement_plugin/docs/: REFACTORING_GUIDE.md  functional_diagram.md  refactored_architecture.mmd
base_placement_plugin/include/base_placement_plugin/: add_robot_base.h  add_way_point.h  base_placement_core.h  base_placement_panel.h  base_placement_server.h  create_marker.h  interactive_base_selector.h  place_base.h  sphere_discretization.h
base_placement_plugin/include/base_placement_plugin/widgets/: base_placement_widget.h
base_placement_plugin/launch/: test_pipeline.launch.py
base_placement_plugin/src/: add_robot_base.cpp  add_way_point.cpp  base_placement_core.cpp  base_placement_core_implementations.cpp  base_placement_panel.cpp  base_placement_server.cpp  create_marker.cpp  interactive_base_selector.cpp  place_base.cpp  point_tree_model.cpp  sphere_discretization.cpp  test_pipeline.cpp
base_placement_plugin/src/widgets/: base_placement_widget.cpp  base_placement_widget.ui
data_generation/: CMakeLists.txt  README.md  heat_map.py  load_npz_to_text.py  package.xml
data_generation/config/: cameras.yaml  leeloo_world.yaml
data_generation/data/: IRM_0.1.h5
data_generation/docker/: build_docker.sh  convert2apptainer.bash  start_docker.sh  x86.dockerfile
data_generation/include/: data_generator.h  master_ik_data.h  reachability_visualisation.h  robot.h  sphere_discretization.h  utils.h
data_generation/launch/: create_reachability_map.launch.py  generate_data.launch.py  generate_real_data.launch.py
data_generation/script/: run_real_data_gen.sh  run_real_data_generation.sh
data_generation/src/: create_inverse_reachability_map.cpp  create_reachability_map.cpp  data_generator.cpp  example.cpp  obstacle_adder.cpp  reachability_map_viz.cpp  robot.cpp  scene_manager.cpp  sphere_discretization.cpp  utils.cpp  visualize_dataset.cpp
docker/: x86.dockerfile
include/: data_generator.h  hdf5_manager.hpp  master_ik_data.h  obstacle_adder.h  robot.h  sphere_discretization.h  utils.h
launch/: create_reachability_map.launch.py  generate_data.launch.py
script/: debug_voxel_grid.py  test_open3d.py
src/: cpp_parameters_node.cpp  create_reachability_map.cpp  data_generator.cpp  dataset_heatmap.cpp  hdf5_manager.cpp  marker_voxel_grid.cpp  master_ik_data.cpp  obstacle_adder.cpp  reachability_map_viz.cpp  robot.cpp  scene_manager.cpp  service_test.cpp  sphere_discretization.cpp  test_hdf5.cpp  utils.cpp  visualize_dataset.cpp  voxel_heatmap.cpp
unet_3d/: .gitignore  Dockerfile  Dockerfile.aarch64  FILES_CREATED.txt  NEXT_STEPS.md  OPTIMIZATIONS.md  QUICKSTART.md  README.md  README_DOCKER.md  ROS2_PYTHON_COMPATIBILITY.md  START_HERE.txt  SUMMARY.md  WELCOME.txt  build.bash  create_ros2_env.sh  launch_reachability.sh  start.bash
unet_3d/config/: test_reach.yaml  train_reach.yaml
unet_3d/ros2_ws/src/capacitynet/: OPTIMIZATIONS.md  TESTING.md  package.xml  setup.cfg  setup.py
unet_3d/ros2_ws/src/capacitynet/capacitynet/: brain_orchestrator.py  capacitynet.py  gradient_controller.py  gradient_controller_mock.py  obstacle_transformer.py  trt_model.py  voxel_mask.py  workspace_evaluation.py
unet_3d/ros2_ws/src/capacitynet/config/: floor_world.yml  test_reach.yaml
unet_3d/ros2_ws/src/capacitynet/launch/: brain_orchestrator.launch.py  gradient_controller_mock.launch.py  gradient_reachability.launch.py
unet_3d/ros2_ws/src/capacitynet/scripts/: export_to_trt.py
unet_3d/script/: convert_to_3dunet.py  format_data.py  format_vizualyze.py  pad_converter.py
unet_3d/script/old/: format_data.py  load_data.py  pad_converter.py  remove_empty.py
vae/: Dockerfile  load_data.py  reach.txt  reachability_map_dataset.py  test.py  test_FCN.py  test_vae.py  todo.txr  voxel.txt
